@@ -3,7 +3,11 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Document partman/early_command (added in partman-base 129).
 
- -- Frans Pop <fjp@debian.org>  Wed, 10 Dec 2008 21:05:01 +0100
+  [ Frans Pop ]
+  * Document preseeding of network-console now that its postinst can be
+    relied on to be executed.
+
+ -- Frans Pop <fjp@debian.org>  Sat, 27 Dec 2008 06:52:19 +0100
 
 installation-guide (20081208) unstable; urgency=low
 
